--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@ title: Nathan Griffin, PowerShell Noob
 ---
 	<div class="blurb">
 		<h1>Hi there, I'm Nathan Griffin</h1>
-		<p>As of 25th July 2021 I know next to nothing about Git,GitHub,HTML,CSS,Jekyll or Markdown. This site is where i begin my journey to learn these tools!</p>
-        	<p>I do however know an average amount of PowerShell and I will be more than happy to share my knowledge on here when i finally learn the skills mentioned above... </p>
-	</div><!-- /.blurb -->
+		<p>Welcome to my no bullshit powershell blog. I hope you find some posts here useful i suppose!</p>
+</div><!-- /.blurb -->
 
