--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Nathan Griffin, PowerShell Noob
 ---
 	<div class="blurb">
-		<h1>Hi there, I'm Nathan Griffin</h1>
-		<p>Welcome to my no bullshit powershell blog. I hope you find some posts here useful i suppose!</p>
+		<h1>Hi</h1>
+		<p>Welcome to my indefinite work in progress</p>
 </div><!-- /.blurb -->
 
